# PicoUsbLedStrip

./: CODE_OF_CONDUCT.md  Constants.cs  LICENSE  README.md
DeskDisplayClient/: DeskDisplayClient.sln
DeskDisplayClient/DeskDisplayClient/: DeskDisplayClient.cs  DeskDisplayClient.csproj
DeskDisplayClient/DeskDisplayClient/Properties/: launchSettings.json
DeskDisplayHost/: CMakeLists.txt  DeskDisplayHost.vcxproj  TODO.md  debug.cpp  debug.hpp  deskdisplay.cpp  fftData.cpp  fftData.hpp  writablearray.cpp  writablearray.hpp  writablearrayTest.cpp  writablearrayTest.hpp
DeskDisplayHost/dependencies/custom_kiss_fft/: fftData.cpp  fftData.hpp  kiss_fftr.cpp  kiss_fftr.hpp
PicoUsbLedStripClient/: PicoUsbLedStripClient.sln
PicoUsbLedStripClient/PicoUsbLedStripClient/: PicoUsbLedStripClient.cs  PicoUsbLedStripClient.csproj
PicoUsbLedStripClient/PicoUsbLedStripClient/Properties/: launchSettings.json
PicoUsbLedStripHost/: .gitignore  CMakeLists.txt  PicoUsbLedStrip.cpp  TODO.md  debug.cpp  fftData.hpp  fftData.hpp~Updated upstream
PicoUsbLedStripHost/dependencies/: WS2812.hpp
PicoUsbLedStripHost/src/: PicoUsbLedStrip.cpp  config.cpp  config.hpp  debug.hpp  fftData.cpp  fftData.hpp  writablearray.cpp  writablearray.hpp
